firmware/application/external/enhanced_drone_analyzer/build errors.txt
[ 97%] Building CXX object firmware/application/CMakeFiles/application.elf.dir/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp.obj
In file included from /havoc/firmware/application/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp:28:
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp: In lambda function:
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:548:21: error: 'process_mini_spectrum_data' was not declared in this scope; did you mean 'process_channel_spectrum_data'?
  548 |                     process_mini_spectrum_data(channel_spectrum);
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |                     process_channel_spectrum_data
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:550:17: error: 'render_mini_spectrum' was not declared in this scope
  550 |                 render_mini_spectrum();
      |                 ^~~~~~~~~~~~~~~~~~~~
In file included from /havoc/firmware/application/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp:28:
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp: At global scope:
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:708:10: error: 'void ui::external_app::enhanced_drone_analyzer::DroneDisplayController::process_mini_spectrum_data(const ChannelSpectrum&)' cannot be overloaded with 'void ui::external_app::enhanced_drone_analyzer::DroneDisplayController::process_mini_spectrum_data(const ChannelSpectrum&)'
  708 |     void process_mini_spectrum_data(const ChannelSpectrum& spectrum);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:696:10: note: previous declaration 'void ui::external_app::enhanced_drone_analyzer::DroneDisplayController::process_mini_spectrum_data(const ChannelSpectrum&)'
  696 |     void process_mini_spectrum_data(const ChannelSpectrum& spectrum);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:709:10: error: 'void ui::external_app::enhanced_drone_analyzer::DroneDisplayController::render_mini_spectrum()' cannot be overloaded with 'void ui::external_app::enhanced_drone_analyzer::DroneDisplayController::render_mini_spectrum()'
  709 |     void render_mini_spectrum();
      |          ^~~~~~~~~~~~~~~~~~~~
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:698:10: note: previous declaration 'void ui::external_app::enhanced_drone_analyzer::DroneDisplayController::render_mini_spectrum()'
  698 |     void render_mini_spectrum();
      |          ^~~~~~~~~~~~~~~~~~~~
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp: In member function 'virtual void ui::external_app::enhanced_drone_analyzer::AudioManager::play_detection_beep(ThreatLevel)':
/havoc/firmware/application/external/enhanced_drone_analyzer/ui_scanner_combined.hpp:1013:9: error: 'baseband_api' has not been declared
 1013 |         baseband_api::request_audio_beep(frequency_hz, 48000, 200);
      |         ^~~~~~~~~~~~
At global scope:
cc1plus: warning: unrecognized command line option '-Wno-volatile'
make[2]: *** [firmware/application/CMakeFiles/application.elf.dir/build.make:5369: firmware/application/CMakeFiles/application.elf.dir/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:1337: firmware/application/CMakeFiles/application.elf.dir/all] Error 2
make: *** [Makefile:101: all] Error 2
Error: Process completed with exit code 2.